@@ -22,6 +22,7 @@ in the inside string. If the triple quotes are indented 4 spaces, then the text 
 spaces removed too.
 
 === New features
+* Added new feature[:feature_path] task (Roman Gonzalez)
 * Added support for Polish (Joseph Wilk)
 * Support specifying multiple formatters and multiple outputs (#47 Joseph Wilk)
 * Added support for Japanese. (Kakutani Shintaro)
